2001-12-08  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Get guard shapes for SI.
	* mapedit/studio.cc: Try to reconnect to Exult automatically.
	* gamewin.cc: A 'patch' initgame.dat is NOT a new game, in the
	sense that it has the original U7 structure.

2001-12-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucxt/src/Makefile.am: fixed include dirs
	
2001-12-07  Jeff Freedman  <jeff@amy.nerble.net>

	* readnpcs.cc: BG NPC's 293-297 are not valid and should be skipped.
	* usecode/ucinternal.cc: Don't create script for NULL object.

	* objs/chunks.cc: Found a case where it's BAD to use an iterator,
	since the vector can change.  This fixes a memory-corruption crash.

	* actors.cc: If no body for dead NPC, put items on ground.
	* usecode/ucinternal.cc,objs/egg.cc:  Do_speech() plays speech if
	possible, else calls Usecode function to display text.

2001-12-06  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc: Use old lift when activating eggs object was moved away
	from.

2001-12-05  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Allow talking to NPC in combat if NPC is friendly or
	neutral.
	* effects.cc,effects.h,intrinsics.cc (Projectile_effect): Store
	projectile AND sprite shapes separately so we can test properly
	for explosion at target.

2001-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: added ucxt directories
	* exult.spec.in: added ucc, ucxt, splitshp and shp2pcx to tools 
	subpackage
	* tools/Makefile.am: install splitshp and shp2pcx. Removed references 
	to ucc
	* tools/ucclex.l, tools/uccparse.y: removed
	* usecode/ucxt/*: many changes to automake/autoconf logic. Made ucxt
	installable and make it look for opcodes.txt in EXULT_DATADIR as well

2001-12-05  Ryan Nunn <triforce@merlin.net.au>
	* gamewin.cc, objs/egg.cc, objs/egg.h : Polishing Mirrors
	* Actors.cc : NPC Actors can now kind of activate eggs (only when 
	  stepping). A more global solution is required to all types of Actors