@@ -187,10 +187,10 @@ class UCFunc
 		           _codeoffset(0), _num_args(0), _num_locals(0), _num_externs(0) {};
 
 		// temp passing UCData, probably shouldn't need it.
-		void output_ucs(ostream &o, const FuncMap &funcmap, bool gnubraces=false);
-		void output_ucs_node(ostream &o, const FuncMap &funcmap, UCNode* ucn, unsigned int indent);
-		void output_ucs_data(ostream &o, const FuncMap &funcmap, unsigned int indent);
-		void output_ucs_opcode(ostream &o, const FuncMap &funcmap, const vector<UCOpcodeData> &optab, const UCc &op, unsigned int);
+		void output_ucs(ostream &o, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics, bool gnubraces=false);
+		void output_ucs_node(ostream &o, const FuncMap &funcmap, UCNode* ucn, const map<unsigned int, string> &intrinsics, unsigned int indent);
+		void output_ucs_data(ostream &o, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics, unsigned int indent);
+		void output_ucs_opcode(ostream &o, const FuncMap &funcmap, const vector<UCOpcodeData> &optab, const UCc &op, const map<unsigned int, string> &intrinsics, unsigned int);
 		
 		void parse_ucs(const FuncMap &funcmap);
 		void parse_ucs_pass1(vector<UCNode *> &nodes);
@@ -231,7 +231,7 @@ class UCFunc
 };
 
 void readbin_UCFunc(ifstream &f, UCFunc &ucf);
-void print_asm(UCFunc &ucf, ostream &o, const FuncMap &funcmap, const UCData &uc);
+void print_asm(UCFunc &ucf, ostream &o, const FuncMap &funcmap, const map<unsigned int, string> &intrinsics, const UCData &uc);
 
 /*class UCFunc
 {
